--- a/kernel/drivers/Makefile
+++ b/kernel/drivers/Makefile
@@ -2,3 +2,7 @@ obj-d := acpi
 
 obj-y := net/generic_card.o ms_mouse.o keyboard.o
 obj-$(CONFIG_ENABLE_FAKE_NETWORK_CARD) += net/fake_card.o
+
+obj-$(CONFIG_INTREE_SAMPLE_MODULE) += intree-mod.o
+
+intree-mod-y := intree-sample.o intree-sample-2.o
