generate rust target.json

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -145,7 +145,7 @@ defconfig: scripts/kconfig/Makefile
 
 # clean targets
 clean: modclean
-	@rm -f kernel.o kernel.bin symtab.S symtab.o kernel_partial.o
+	@rm -f kernel.o kernel.bin symtab.S symtab.o kernel_partial.o rust/rust-target-gen.json
 	@find ./arch ./drivers ./fs ./include ./kernel ./net ./mm ./stdlibs ./tests ./abi ./rust \( -name '*.lds' -o -name '*.o' -o -name '*.rlib' -o -name '*.d' \) -type f -delete
 
 distclean: clean
