--- a/kernel/rust/Makefile
+++ b/kernel/rust/Makefile
@@ -1,1 +1,6 @@
 obj-d := stdlibs libkernel demo
+
+$(objtree)/rust-target-gen.json:
+	@python3 rust/gentarget.py $@
+
+extratargets-$(CONFIG_RUST_SUPPORT) := rust-target-gen.json
