--- a/kernel/tests/Makefile
+++ b/kernel/tests/Makefile
@@ -1,1 +1,1 @@
-obj-$(CONFIG_ENABLE_TESTS) := tests.o malloc_test.o initcall_test.o
+obj-$(CONFIG_ENABLE_TESTS) := tests.o malloc_test.o initfn_test.o
